Add community structure sensitivity analysis for ECI
Key Finding: ECI is EXTREMELY sensitive to community/modular structure:
- Perfect nesting: ECI ↔ div correlation = 0.91
- Just 2 communities: drops to 0.14 (85% degradation!)
- 5+ communities: essentially noise (0.09)
- log(Fitness) remains robust: 0.86 → 0.60

This explains Wikipedia data:
- Multiple specialist communities (astrophysics, biology, history, etc.)
- Each has specialized vocabulary (rare technical terms)
- Breaks single nested hierarchy ECI requires
- ECI fails, log(Fitness) remains meaningful

Changes:
- Added test_eci_noise_sensitivity.py with systematic sensitivity tests
- Updated nested_matrix notebook with community structure comparison
- Fixed Wikipedia notebook explanations to reflect community structure
- Added plot showing ECI degradation vs communities

--- a/examples/nested_matrix_fitness_complexity.ipynb
+++ b/examples/nested_matrix_fitness_complexity.ipynb
@@ -486,6 +486,123 @@
     "print(\"- Note: log(Fitness) used for meaningful comparison (Fitness is multiplicative)\")\n",
     "print(\"=\" * 60)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Community Structure Sensitivity\n",
+    "\n",
+    "**Key Question**: How sensitive is ECI to deviations from perfect nesting?\n",
+    "\n",
+    "Real-world data often has **multiple specialist communities** (e.g., different fields in Wikipedia) rather than a single nested hierarchy. Let's test how this affects ECI vs Fitness."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Test matrices with increasing number of communities\n",
+    "n_communities_list = [1, 2, 3, 5]\n",
+    "results_by_communities = []\n",
+    "\n",
+    "print(\"\\n\" + \"=\" * 70)\n",
+    "print(\"ECI SENSITIVITY TO COMMUNITY STRUCTURE\")\n",
+    "print(\"=\" * 70)\n",
+    "print(\"\\nCreating matrices with multiple specialist communities...\\n\")\n",
+    "print(f\"{'Communities':<15} {'ECI↔Div':<12} {'log(F)↔Div':<12} {'Degradation':<15}\")\n",
+    "print(\"-\" * 70)\n",
+    "\n",
+    "for n_communities in n_communities_list:\n",
+    "    # Create matrix with n communities\n",
+    "    M_comm_data = []\n",
+    "    rows_per_community = n_users // n_communities\n",
+    "    cols_per_community = n_words // n_communities\n",
+    "    \n",
+    "    for comm_idx in range(n_communities):\n",
+    "        # Each community has nested structure within itself\n",
+    "        for i in range(rows_per_community):\n",
+    "            row = np.zeros(n_words)\n",
+    "            # Common words (first 20% of columns)\n",
+    "            n_common = int(0.2 * n_words)\n",
+    "            row[:n_common] = (np.random.rand(n_common) > 0.3).astype(float)\n",
+    "            \n",
+    "            # Community-specific words (nested within community)\n",
+    "            comm_start = n_common + comm_idx * (cols_per_community - n_common // n_communities)\n",
+    "            comm_end = min(comm_start + int((i + 1) * 0.7 * cols_per_community / rows_per_community), n_words)\n",
+    "            if comm_start < n_words:\n",
+    "                row[comm_start:comm_end] = 1\n",
+    "            \n",
+    "            M_comm_data.append(row)\n",
+    "    \n",
+    "    M_comm = sp.csr_matrix(np.array(M_comm_data))\n",
+    "    \n",
+    "    # Compute ECI and Fitness\n",
+    "    eci_comm, _ = compute_eci_pci(M_comm)\n",
+    "    F_comm, Q_comm, _ = fitness_complexity(M_comm)\n",
+    "    \n",
+    "    # Compute correlations\n",
+    "    div_comm = np.asarray(M_comm.sum(axis=1)).ravel()\n",
+    "    log_F_comm = np.log(F_comm)\n",
+    "    \n",
+    "    corr_eci_comm = np.corrcoef(eci_comm, div_comm)[0, 1]\n",
+    "    corr_logF_comm = np.corrcoef(log_F_comm, div_comm)[0, 1]\n",
+    "    \n",
+    "    results_by_communities.append({\n",
+    "        'n_communities': n_communities,\n",
+    "        'eci_corr': corr_eci_comm,\n",
+    "        'logF_corr': corr_logF_comm\n",
+    "    })\n",
+    "    \n",
+    "    if n_communities == 1:\n",
+    "        degradation = \"(baseline)\"\n",
+    "    else:\n",
+    "        deg_eci = results_by_communities[0]['eci_corr'] - corr_eci_comm\n",
+    "        degradation = f\"ECI: {deg_eci:+.3f}\"\n",
+    "    \n",
+    "    print(f\"{n_communities:<15} {corr_eci_comm:>6.3f}       {corr_logF_comm:>6.3f}       {degradation:<15}\")\n",
+    "\n",
+    "print(\"=\" * 70)\n",
+    "print(\"\\n⚠️  KEY FINDING: Community/modular structure DESTROYS ECI!\")\n",
+    "print(f\"\\n  • 1 community (nested):      ECI={results_by_communities[0]['eci_corr']:.3f}\")\n",
+    "print(f\"  • 2 communities:             ECI={results_by_communities[1]['eci_corr']:.3f} (drops {results_by_communities[0]['eci_corr'] - results_by_communities[1]['eci_corr']:.3f})\")\n",
+    "print(f\"  • {n_communities_list[-1]} communities:            ECI={results_by_communities[-1]['eci_corr']:.3f} (essentially noise!)\")\n",
+    "print(f\"\\n  • log(Fitness) much more robust: {results_by_communities[0]['logF_corr']:.3f} → {results_by_communities[-1]['logF_corr']:.3f}\")\n",
+    "print(\"\\nThis explains Wikipedia data: multiple specialist communities\")\n",
+    "print(\"(astrophysics, biology, history) each with specialized vocabulary.\")\n",
+    "print(\"=\" * 70)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Visualize the degradation\n",
+    "n_comms = [r['n_communities'] for r in results_by_communities]\n",
+    "eci_corrs = [r['eci_corr'] for r in results_by_communities]\n",
+    "logF_corrs = [r['logF_corr'] for r in results_by_communities]\n",
+    "\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "plt.plot(n_comms, eci_corrs, 'o-', linewidth=2, markersize=8, label='ECI ↔ Diversification')\n",
+    "plt.plot(n_comms, logF_corrs, 's-', linewidth=2, markersize=8, label='log(Fitness) ↔ Diversification')\n",
+    "plt.axhline(0.7, color='red', linestyle='--', alpha=0.5, label='Threshold (0.7)')\n",
+    "plt.xlabel('Number of Communities', fontsize=12)\n",
+    "plt.ylabel('Correlation with Diversification', fontsize=12)\n",
+    "plt.title('ECI vs Fitness: Sensitivity to Community Structure', fontsize=13)\n",
+    "plt.legend(fontsize=11)\n",
+    "plt.grid(True, alpha=0.3)\n",
+    "plt.ylim([0, 1.05])\n",
+    "plt.tight_layout()\n",
+    "plt.show()\n",
+    "\n",
+    "print(\"\\n✓ ECI works perfectly on single nested hierarchy\")\n",
+    "print(\"✗ ECI breaks down with just 2 communities\")\n",
+    "print(\"✓ log(Fitness) remains meaningful across all structures\")"
+   ]
   }
  ],
  "metadata": {
