--- a/examples/wikipedia_editing_fitness_complexity.ipynb
+++ b/examples/wikipedia_editing_fitness_complexity.ipynb
@@ -22,7 +22,25 @@
         "This notebook:\n",
         "\n",
         "- Downloads a sample of Wikipedia users from BigQuery and aggregates their edits into per-user text.\n",
-        "- Builds a `user` $\\times$ `word` matrix and its *support* (analogous to `country` $\\times$ `product`).\n"
+        "- Builds a `user` $\\times$ `word` matrix and its *support* (analogous to `country` $\\times$ `product`).\n",
+        "\n",
+        "**Expected behavior**: Wikipedia likely has **community/modular structure** (different specialist fields like astrophysics, biology, history) rather than a single nested hierarchy. This means:\n",
+        "- **ECI** will show **poor correlation** with diversification (community structure breaks its assumption)\n",
+        "- **log(Fitness)** will remain **robust** and meaningful\n",
+        "- See the nested_matrix notebook for systematic analysis of this effect\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "1b",
+      "metadata": {},
+      "source": [
+        "### Why log(Fitness)?\n",
+        "\n",
+        "Throughout this notebook, we use **log(Fitness)** for correlations with ECI and diversification because:\n",
+        "- Fitness is a **multiplicative/exponential** quantity (spans many orders of magnitude)\n",
+        "- ECI and diversification are **linear** scales\n",
+        "- log(Fitness) provides the appropriate scale for meaningful comparison\n"
       ]
     },
     {
@@ -411,9 +429,15 @@
         "print(f\"Correlation(log(Fitness), Diversification): {corr_logF_div:.4f}\")\n",
         "print(f\"Correlation(ECI, log(Fitness)):             {corr_eci_logF:.4f}\")\n",
         "print(\"\\nInterpretation:\")\n",
-        "print(\"- Low ECI correlations suggest data is NOT perfectly nested\")\n",
-        "print(\"- Wikipedia word usage has 'shortcuts' that break nested structure\")\n",
-        "print(\"- log(Fitness) remains robust even on non-nested real-world data\")\n",
+        "print(\"- Low ECI correlations suggest Wikipedia has COMMUNITY/MODULAR structure\")\n",
+        "print(\"- Different specialist communities (astrophysics, biology, history, etc.)\")\n",
+        "print(\"  each have their own specialized vocabulary (rare technical terms)\")\n",
+        "print(\"- This breaks the single nested hierarchy that ECI requires\")\n",
+        "print(\"- log(Fitness) remains robust: works across different data structures\")\n",
+        "print(\"\\nWhy ECI fails here:\")\n",
+        "print(\"- ECI assumes: high-diversity users use ALL words low-diversity users have\")\n",
+        "print(\"- Reality: specialist editors use rare technical terms generalists don't\")\n",
+        "print(\"- Just 2 communities drops ECI correlation from 0.9 → 0.1 (see nested notebook)\")\n",
         "print(\"=\"*60 + \"\\n\")\n",
         "\n",
         "plt.figure(figsize=(5, 4))\n",
