Add community detection and enhanced eigenvalue diagnostics
Enhancements:
- Add comprehensive eigenvalue diagnostics to all notebooks and tests
  * Compute relative magnitudes (λ₃/λ₂, λ₄/λ₂)
  * Count significant eigenvalues (>20% of λ₂)
  * Provide refined interpretation of community structure

- Add community detection section to Wikipedia notebook
  * Project users onto top eigenvectors
  * Cluster via K-means on eigenvector projections
  * Test ECI performance within communities vs. globally
  * Visualize communities in eigenvector space

Key finding: Eigenvalue analysis reveals that community structure
(multiple significant eigenvalues) explains why ECI fails globally.
Within-community ECI analysis will show if separating communities
improves ECI performance while maintaining Fitness as global measure.

--- a/examples/nested_matrix_fitness_complexity.ipynb
+++ b/examples/nested_matrix_fitness_complexity.ipynb
@@ -553,7 +553,8 @@
     "    results_by_communities.append({\n",
     "        'n_communities': n_communities,\n",
     "        'eci_corr': corr_eci_comm,\n",
-    "        'logF_corr': corr_logF_comm\n",
+    "        'logF_corr': corr_logF_comm,\n",
+    "        'M': M_comm\n",
     "    })\n",
     "    \n",
     "    if n_communities == 1:\n",
@@ -602,6 +603,127 @@
     "print(\"\\n✓ ECI works perfectly on single nested hierarchy\")\n",
     "print(\"✗ ECI breaks down with just 2 communities\")\n",
     "print(\"✓ log(Fitness) remains meaningful across all structures\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Eigenvalue Spectrum Diagnostic\n",
+    "\n",
+    "**Theory**: The eigenvalue spectrum reveals why ECI fails on community structure.\n",
+    "\n",
+    "ECI uses the **2nd eigenvector** of the country-country projection matrix C. For this to work, we need:\n",
+    "- **Clear spectral gap**: λ₂ >> λ₃ (single dominant structure)\n",
+    "\n",
+    "With multiple communities:\n",
+    "- **Flat spectrum**: λ₂ ≈ λ₃ ≈ ... ≈ λₖ (multiple competing structures)\n",
+    "- ECI captures only 1 dimension of k-dimensional structure\n",
+    "\n",
+    "Let's compare perfect nesting vs 2 communities:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Function to compute eigenvalues of country-country matrix\n",
+    "def compute_eigenspectrum(M, n_eigs=15):\n",
+    "    kc = np.asarray(M.sum(axis=1)).ravel()\n",
+    "    kp = np.asarray(M.sum(axis=0)).ravel()\n",
+    "    \n",
+    "    kc_safe = np.where(kc > 0, kc, 1)\n",
+    "    kp_safe = np.where(kp > 0, kp, 1)\n",
+    "    \n",
+    "    M_normalized = M.toarray() / kc_safe[:, np.newaxis]\n",
+    "    M_T_normalized = M.toarray().T / kp_safe[:, np.newaxis]\n",
+    "    C = M_normalized @ M_T_normalized\n",
+    "    \n",
+    "    eigenvalues = np.linalg.eigvalsh(C)\n",
+    "    eigenvalues = np.sort(eigenvalues)[::-1]\n",
+    "    return eigenvalues[:n_eigs]\n",
+    "\n",
+    "# Get matrices from previous analysis\n",
+    "M_2comm = [r['M'] for r in results_by_communities if r['n_communities']==2][0]\n",
+    "\n",
+    "# Compute eigenspectra\n",
+    "eigs_nested = compute_eigenspectrum(M)\n",
+    "eigs_2comm = compute_eigenspectrum(M_2comm)\n",
+    "\n",
+    "# Compute spectral gaps\n",
+    "gap_nested = eigs_nested[1] / eigs_nested[2]\n",
+    "gap_2comm = eigs_2comm[1] / eigs_2comm[2]\n",
+    "\n",
+    "print(\"\\n\" + \"=\"*70)\n",
+    "print(\"EIGENVALUE SPECTRUM COMPARISON\")\n",
+    "print(\"=\"*70)\n",
+    "print(f\"\\nPerfect Nesting (original matrix):\")\n",
+    "print(f\"  λ₁ = {eigs_nested[0]:.4f} (trivial uniform vector)\")\n",
+    "print(f\"  λ₂ = {eigs_nested[1]:.4f} ← ECI uses this\")\n",
+    "print(f\"  λ₃ = {eigs_nested[2]:.4f}\")\n",
+    "print(f\"  Spectral gap (λ₂/λ₃): {gap_nested:.2f}\")\n",
+    "print(f\"  Relative magnitudes: λ₃/λ₂={eigs_nested[2]/eigs_nested[1]:.2f}, λ₄/λ₂={eigs_nested[3]/eigs_nested[1]:.2f}\")\n",
+    "\n",
+    "print(f\"\\n2 Communities:\")\n",
+    "print(f\"  λ₁ = {eigs_2comm[0]:.4f} (trivial uniform vector)\")\n",
+    "print(f\"  λ₂ = {eigs_2comm[1]:.4f} ← ECI uses this\")\n",
+    "print(f\"  λ₃ = {eigs_2comm[2]:.4f} ← 2nd community signal!\")\n",
+    "print(f\"  Spectral gap (λ₂/λ₃): {gap_2comm:.2f}\")\n",
+    "print(f\"  Relative magnitudes: λ₃/λ₂={eigs_2comm[2]/eigs_2comm[1]:.2f}, λ₄/λ₂={eigs_2comm[3]/eigs_2comm[1]:.2f}\")\n",
+    "\n",
+    "# Count significant eigenvalues\n",
+    "n_sig_nested = np.sum(eigs_nested > 0.2 * eigs_nested[1])\n",
+    "n_sig_2comm = np.sum(eigs_2comm > 0.2 * eigs_2comm[1])\n",
+    "\n",
+    "print(f\"\\nSignificant eigenvalues (>20% of λ₂):\")\n",
+    "print(f\"  Perfect nesting: {n_sig_nested} → Structure captured by 1-2 dimensions\")\n",
+    "print(f\"  2 communities:   {n_sig_2comm} → Requires more dimensions!\")\n",
+    "\n",
+    "print(\"\\n⚠️  KEY INSIGHT:\")\n",
+    "print(\"  ECI uses only λ₂ (1 dimension) to capture complexity\")\n",
+    "print(\"  With communities: need λ₂, λ₃, ..., λₖ (k dimensions)\")\n",
+    "print(\"  Single-dimension projection misses most community structure!\")\n",
+    "print(\"\\nWikipedia likely has 5-10+ significant eigenvalues (many communities)\")\n",
+    "print(\"This is why ECI fails: trying to capture k-dimensional structure with 1D projection\")\n",
+    "print(\"=\"*70)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Visualize eigenvalue spectra\n",
+    "fig, (ax1, ax2) = plt.subplots(1, 2, figsize=(14, 5))\n",
+    "\n",
+    "# Plot 1: Perfect nesting\n",
+    "n_plot = min(15, len(eigs_nested))\n",
+    "ax1.bar(range(1, n_plot + 1), eigs_nested[:n_plot], color='steelblue', alpha=0.7, edgecolor='black')\n",
+    "ax1.axvline(2, color='red', linestyle='--', linewidth=2, label='ECI (λ₂)', alpha=0.7)\n",
+    "ax1.set_xlabel('Eigenvalue Index', fontsize=12)\n",
+    "ax1.set_ylabel('Eigenvalue', fontsize=12)\n",
+    "ax1.set_title(f'Perfect Nesting: Clear Spectral Gap\\n(λ₂/λ₃ = {gap_nested:.1f})', fontsize=13)\n",
+    "ax1.legend()\n",
+    "ax1.grid(True, alpha=0.3, axis='y')\n",
+    "\n",
+    "# Plot 2: 2 communities\n",
+    "ax2.bar(range(1, n_plot + 1), eigs_2comm[:n_plot], color='coral', alpha=0.7, edgecolor='black')\n",
+    "ax2.axvline(2, color='red', linestyle='--', linewidth=2, label='ECI (λ₂)', alpha=0.7)\n",
+    "ax2.axvline(3, color='purple', linestyle=':', linewidth=2, label='λ₃ (2nd community)', alpha=0.7)\n",
+    "ax2.set_xlabel('Eigenvalue Index', fontsize=12)\n",
+    "ax2.set_ylabel('Eigenvalue', fontsize=12)\n",
+    "ax2.set_title(f'2 Communities: Flat Spectrum\\n(λ₂/λ₃ = {gap_2comm:.1f})', fontsize=13)\n",
+    "ax2.legend()\n",
+    "ax2.grid(True, alpha=0.3, axis='y')\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "plt.show()\n",
+    "\n",
+    "print(\"\\n⚠️  Diagnosis: Wikipedia eigenspectrum likely looks like the right plot!\")\n",
+    "print(\"Multiple significant eigenvalues = multiple communities = ECI failure\")"
    ]
   }
  ],
