--- a/examples/wikipedia_editing_fitness_complexity.ipynb
+++ b/examples/wikipedia_editing_fitness_complexity.ipynb
@@ -25,8 +25,11 @@
         "- Builds a `user` $\\times$ `word` matrix and its *support* (analogous to `country` $\\times$ `product`).\n",
         "\n",
         "**Expected behavior**: Wikipedia likely has **community/modular structure** (different specialist fields like astrophysics, biology, history) rather than a single nested hierarchy. This means:\n",
-        "- **ECI** will show **poor correlation** with diversification (community structure breaks its assumption)\n",
-        "- **log(Fitness)** will remain **robust** and meaningful\n",
+        "- **ECI** will show **poor correlation** with diversification globally (community structure breaks its assumption)\n",
+        "- **Eigenvalue analysis** can detect and quantify community structure\n",
+        "- **Community detection** can separate users into specialist groups\n",
+        "- **ECI may work better within communities** (where structure is more nested)\n",
+        "- **log(Fitness)** remains **robust** as a global complexity measure\n",
         "- See the nested_matrix notebook for systematic analysis of this effect\n"
       ]
     },
@@ -448,6 +451,328 @@
         "plt.yscale('log')\n",
         "plt.tight_layout()\n",
         "plt.show()\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "358326e8",
+      "metadata": {},
+      "source": [
+        "### Eigenvalue Spectrum Analysis\n",
+        "\n",
+        "**Key diagnostic**: The eigenvalue spectrum of the country-country projection matrix C reveals community structure.\n",
+        "\n",
+        "**Expected patterns**:\n",
+        "- **Perfect nesting**: λ₂ >> λ₃ >> ... (clear spectral gap, single dominant structure)\n",
+        "- **k Communities**: λ₂ ≈ λ₃ ≈ ... ≈ λₖ (multiple significant eigenvalues)\n",
+        "\n",
+        "The **spectral gap ratio** (λ₂/λ₃) tells us:\n",
+        "- Large ratio (>5): Single nested hierarchy → ECI works\n",
+        "- Small ratio (<2): Multiple communities → ECI fails"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "539c7699",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Compute country-country projection matrix (what ECI uses)\n",
+        "# C = (M/kc) @ (M^T/kp)\n",
+        "kc = np.asarray(M.sum(axis=1)).ravel()  # diversification\n",
+        "kp = np.asarray(M.sum(axis=0)).ravel()  # ubiquity\n",
+        "\n",
+        "# Avoid division by zero\n",
+        "kc_safe = np.where(kc > 0, kc, 1)\n",
+        "kp_safe = np.where(kp > 0, kp, 1)\n",
+        "\n",
+        "# Compute C\n",
+        "M_normalized = M.toarray() / kc_safe[:, np.newaxis]\n",
+        "M_T_normalized = M.toarray().T / kp_safe[:, np.newaxis]\n",
+        "C = M_normalized @ M_T_normalized\n",
+        "\n",
+        "# Compute eigenvalues\n",
+        "eigenvalues = np.linalg.eigvalsh(C)\n",
+        "eigenvalues = np.sort(eigenvalues)[::-1]  # Sort descending\n",
+        "\n",
+        "# Analyze top eigenvalues\n",
+        "n_show = min(15, len(eigenvalues))\n",
+        "top_eigenvalues = eigenvalues[:n_show]\n",
+        "\n",
+        "# Compute spectral gap\n",
+        "spectral_gap = eigenvalues[1] / eigenvalues[2] if len(eigenvalues) > 2 else np.inf\n",
+        "\n",
+        "print(\"\\n\" + \"=\"*70)\n",
+        "print(\"EIGENVALUE SPECTRUM ANALYSIS\")\n",
+        "print(\"=\"*70)\n",
+        "print(f\"\\nTop {n_show} eigenvalues of country-country matrix C:\")\n",
+        "print(\"-\" * 70)\n",
+        "for i, eig in enumerate(top_eigenvalues, 1):\n",
+        "    marker = \"  ← ECI uses this\" if i == 2 else \"\"\n",
+        "    print(f\"  λ{i:<2} = {eig:>8.4f}{marker}\")\n",
+        "\n",
+        "print(f\"\\nSpectral gap ratio (λ₂/λ₃): {spectral_gap:.2f}\")\n",
+        "\n",
+        "# Compute relative magnitudes\n",
+        "if len(eigenvalues) > 3:\n",
+        "    rel_3 = eigenvalues[2] / eigenvalues[1]\n",
+        "    rel_4 = eigenvalues[3] / eigenvalues[1]\n",
+        "    print(f\"Relative magnitudes: λ₃/λ₂={rel_3:.2f}, λ₄/λ₂={rel_4:.2f}\")\n",
+        "\n",
+        "# Count significant eigenvalues (>20% of λ₂)\n",
+        "n_sig = np.sum(eigenvalues > 0.2 * eigenvalues[1])\n",
+        "print(f\"\\nSignificant eigenvalues (>20% of λ₂): {n_sig}\")\n",
+        "\n",
+        "print(\"\\nInterpretation:\")\n",
+        "if spectral_gap > 5:\n",
+        "    print(\"  ✓ Large spectral gap → Single dominant structure → ECI should work\")\n",
+        "elif spectral_gap > 2:\n",
+        "    print(\"  ⚠ Moderate spectral gap → Mixed structure → ECI may struggle\")\n",
+        "else:\n",
+        "    print(\"  ✗ Small spectral gap → Multiple communities → ECI fails\")\n",
+        "    print(f\"    {n_sig} significant eigenvalues → {n_sig-1} communities likely present\")\n",
+        "\n",
+        "print(\"\\n⚠️  KEY INSIGHT:\")\n",
+        "print(\"  ECI uses only λ₂ (2nd eigenvector = 1 dimension) to capture complexity\")\n",
+        "print(f\"  But with {n_sig} significant eigenvalues, we need {n_sig-1} dimensions (λ₂, λ₃, ...)\")\n",
+        "print(\"  The single-dimension projection misses most of the structure!\")\n",
+        "print(\"=\"*70)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "5266af30",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Visualize eigenvalue spectrum\n",
+        "fig, (ax1, ax2) = plt.subplots(1, 2, figsize=(14, 5))\n",
+        "\n",
+        "# Plot 1: Top eigenvalues (linear scale)\n",
+        "ax1.bar(range(1, n_show + 1), top_eigenvalues, color='steelblue', alpha=0.7, edgecolor='black')\n",
+        "ax1.axvline(2, color='red', linestyle='--', linewidth=2, label='ECI uses λ₂', alpha=0.7)\n",
+        "ax1.set_xlabel('Eigenvalue Index', fontsize=12)\n",
+        "ax1.set_ylabel('Eigenvalue', fontsize=12)\n",
+        "ax1.set_title('Top Eigenvalues of Country-Country Matrix', fontsize=13)\n",
+        "ax1.legend()\n",
+        "ax1.grid(True, alpha=0.3)\n",
+        "\n",
+        "# Plot 2: Eigenvalue decay (log scale)\n",
+        "ax2.semilogy(range(1, n_show + 1), top_eigenvalues, 'o-', markersize=8, linewidth=2, color='steelblue')\n",
+        "ax2.axvline(2, color='red', linestyle='--', linewidth=2, label='ECI uses λ₂', alpha=0.7)\n",
+        "ax2.axhline(0.1 * top_eigenvalues[1], color='orange', linestyle=':', linewidth=2, \n",
+        "            label='10% of λ₂ threshold', alpha=0.7)\n",
+        "ax2.set_xlabel('Eigenvalue Index', fontsize=12)\n",
+        "ax2.set_ylabel('Eigenvalue (log scale)', fontsize=12)\n",
+        "ax2.set_title('Eigenvalue Decay (reveals community structure)', fontsize=13)\n",
+        "ax2.legend()\n",
+        "ax2.grid(True, alpha=0.3)\n",
+        "\n",
+        "plt.tight_layout()\n",
+        "plt.show()\n",
+        "\n",
+        "print(\"\\n✓ If flat eigenvalue spectrum → Multiple communities → ECI fails\")\n",
+        "print(\"✓ If exponential decay → Single hierarchy → ECI works\")"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "community_detection_header",
+      "metadata": {},
+      "source": [
+        "## Community Detection via Eigenvector Clustering\n",
+        "\n",
+        "Since the eigenvalue spectrum reveals multiple communities, we can:\n",
+        "1. Project each user onto the top eigenvectors\n",
+        "2. Cluster users based on which eigenvector(s) they align with\n",
+        "3. Run ECI *within* each community (where it should work better)\n",
+        "4. Maintain Fitness as the global complexity measure\n",
+        "\n",
+        "**Key Insight**: ECI fails globally because it uses only λ₂ (1 dimension), but by separating communities first, ECI can work within each community's nested structure."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "community_detection_code",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "from sklearn.cluster import KMeans\n",
+        "from sklearn.preprocessing import StandardScaler\n",
+        "\n",
+        "# Compute eigenvectors (not just eigenvalues)\n",
+        "eigenvalues_full, eigenvectors = np.linalg.eigh(C)\n",
+        "# Sort by eigenvalue (descending)\n",
+        "idx = np.argsort(eigenvalues_full)[::-1]\n",
+        "eigenvalues_full = eigenvalues_full[idx]\n",
+        "eigenvectors = eigenvectors[:, idx]\n",
+        "\n",
+        "# Project users onto top k eigenvectors (excluding λ₁ which is trivial uniform)\n",
+        "# We use 2-5 eigenvectors to capture the community structure\n",
+        "n_components = min(5, eigenvectors.shape[1])\n",
+        "user_projections = eigenvectors[:, 1:n_components+1]  # Skip λ₁\n",
+        "\n",
+        "print(f\"User projections shape: {user_projections.shape}\")\n",
+        "print(f\"Using top {n_components} eigenvectors (λ₂ through λ_{n_components+1})\")\n",
+        "\n",
+        "# Determine optimal number of communities\n",
+        "# Use the number of significant eigenvalues as a guide\n",
+        "n_sig = np.sum(eigenvalues_full > 0.2 * eigenvalues_full[1])\n",
+        "n_communities = min(n_sig - 1, 5)  # -1 because λ₁ is trivial, cap at 5 for interpretability\n",
+        "\n",
+        "print(f\"\\nDetected {n_sig} significant eigenvalues\")\n",
+        "print(f\"Clustering into {n_communities} communities\\n\")\n",
+        "\n",
+        "# Standardize projections for clustering\n",
+        "scaler = StandardScaler()\n",
+        "user_projections_scaled = scaler.fit_transform(user_projections)\n",
+        "\n",
+        "# K-means clustering\n",
+        "kmeans = KMeans(n_clusters=n_communities, random_state=42, n_init=20)\n",
+        "community_labels = kmeans.fit_predict(user_projections_scaled)\n",
+        "\n",
+        "# Add community labels to results\n",
+        "results_countries['community'] = community_labels\n",
+        "\n",
+        "# Print community statistics\n",
+        "print(\"=\"*70)\n",
+        "print(\"COMMUNITY STATISTICS\")\n",
+        "print(\"=\"*70)\n",
+        "for comm in range(n_communities):\n",
+        "    mask = community_labels == comm\n",
+        "    n_users = mask.sum()\n",
+        "    avg_div = results_countries.loc[mask, 'diversification_kc'].mean()\n",
+        "    avg_fitness = results_countries.loc[mask, 'Fitness'].mean()\n",
+        "    print(f\"\\nCommunity {comm}:\")\n",
+        "    print(f\"  Users: {n_users} ({100*n_users/len(results_countries):.1f}%)\")\n",
+        "    print(f\"  Avg diversification: {avg_div:.1f}\")\n",
+        "    print(f\"  Avg Fitness: {avg_fitness:.3f}\")\n",
+        "    # Show top 3 users\n",
+        "    top_users = results_countries.loc[mask].nlargest(3, 'Fitness')\n",
+        "    print(f\"  Top users: {', '.join(top_users.index[:3])}\")\n",
+        "\n",
+        "print(\"\\n\" + \"=\"*70)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "community_visualization",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Visualize communities in eigenvector space\n",
+        "fig, axes = plt.subplots(1, 2, figsize=(14, 6))\n",
+        "\n",
+        "# Plot 1: Users projected onto λ₂ vs λ₃\n",
+        "ax1 = axes[0]\n",
+        "for comm in range(n_communities):\n",
+        "    mask = community_labels == comm\n",
+        "    ax1.scatter(user_projections[mask, 0], user_projections[mask, 1], \n",
+        "                label=f'Community {comm}', alpha=0.6, s=50)\n",
+        "ax1.set_xlabel('λ₂ (2nd eigenvector)', fontsize=12)\n",
+        "ax1.set_ylabel('λ₃ (3rd eigenvector)', fontsize=12)\n",
+        "ax1.set_title('Users Clustered by Eigenvector Projections', fontsize=13)\n",
+        "ax1.legend()\n",
+        "ax1.grid(True, alpha=0.3)\n",
+        "\n",
+        "# Plot 2: Community sizes and average Fitness\n",
+        "ax2 = axes[1]\n",
+        "comm_sizes = [np.sum(community_labels == c) for c in range(n_communities)]\n",
+        "comm_fitness = [results_countries.loc[community_labels == c, 'Fitness'].mean() \n",
+        "                for c in range(n_communities)]\n",
+        "x = np.arange(n_communities)\n",
+        "width = 0.35\n",
+        "ax2_twin = ax2.twinx()\n",
+        "bars1 = ax2.bar(x - width/2, comm_sizes, width, label='# Users', color='steelblue', alpha=0.7)\n",
+        "bars2 = ax2_twin.bar(x + width/2, comm_fitness, width, label='Avg Fitness', color='coral', alpha=0.7)\n",
+        "ax2.set_xlabel('Community', fontsize=12)\n",
+        "ax2.set_ylabel('Number of Users', fontsize=12, color='steelblue')\n",
+        "ax2_twin.set_ylabel('Average Fitness', fontsize=12, color='coral')\n",
+        "ax2.set_title('Community Sizes and Fitness', fontsize=13)\n",
+        "ax2.set_xticks(x)\n",
+        "ax2.tick_params(axis='y', labelcolor='steelblue')\n",
+        "ax2_twin.tick_params(axis='y', labelcolor='coral')\n",
+        "ax2.grid(True, alpha=0.3, axis='y')\n",
+        "\n",
+        "plt.tight_layout()\n",
+        "plt.show()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "community_eci_analysis",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Test ECI performance within each community vs. globally\n",
+        "print(\"\\n\" + \"=\"*70)\n",
+        "print(\"ECI PERFORMANCE: GLOBAL vs. WITHIN-COMMUNITY\")\n",
+        "print(\"=\"*70)\n",
+        "\n",
+        "# Global ECI correlation (we already computed this)\n",
+        "print(f\"\\nGlobal ECI correlation with log(Fitness): {corr_eci_logF:.3f}\")\n",
+        "print(f\"Global ECI correlation with diversification: {corr_eci_div:.3f}\")\n",
+        "\n",
+        "print(\"\\nWithin-community ECI correlations:\")\n",
+        "print(\"-\" * 70)\n",
+        "\n",
+        "within_comm_correlations = []\n",
+        "for comm in range(n_communities):\n",
+        "    mask = community_labels == comm\n",
+        "    comm_data = results_countries.loc[mask]\n",
+        "    \n",
+        "    # Remove NaN values for correlation\n",
+        "    valid_mask = ~np.isnan(comm_data['ECI'])\n",
+        "    if valid_mask.sum() > 3:  # Need at least a few points\n",
+        "        corr_eci_logF_comm = np.corrcoef(\n",
+        "            comm_data.loc[valid_mask, 'ECI'],\n",
+        "            comm_data.loc[valid_mask, 'log_Fitness']\n",
+        "        )[0, 1]\n",
+        "        corr_eci_div_comm = np.corrcoef(\n",
+        "            comm_data.loc[valid_mask, 'ECI'],\n",
+        "            comm_data.loc[valid_mask, 'diversification_kc']\n",
+        "        )[0, 1]\n",
+        "        \n",
+        "        within_comm_correlations.append({\n",
+        "            'community': comm,\n",
+        "            'n_users': mask.sum(),\n",
+        "            'corr_eci_logF': corr_eci_logF_comm,\n",
+        "            'corr_eci_div': corr_eci_div_comm\n",
+        "        })\n",
+        "        \n",
+        "        print(f\"\\nCommunity {comm} (n={mask.sum()}):\")\n",
+        "        print(f\"  ECI vs log(Fitness): {corr_eci_logF_comm:6.3f}  {'✓' if abs(corr_eci_logF_comm) > 0.7 else '✗'}\")\n",
+        "        print(f\"  ECI vs diversification: {corr_eci_div_comm:6.3f}  {'✓' if abs(corr_eci_div_comm) > 0.7 else '✗'}\")\n",
+        "    else:\n",
+        "        print(f\"\\nCommunity {comm}: Too few users ({mask.sum()}) for correlation\")\n",
+        "\n",
+        "# Compute average within-community correlation\n",
+        "if within_comm_correlations:\n",
+        "    avg_within_corr_logF = np.mean([c['corr_eci_logF'] for c in within_comm_correlations])\n",
+        "    avg_within_corr_div = np.mean([c['corr_eci_div'] for c in within_comm_correlations])\n",
+        "    \n",
+        "    print(\"\\n\" + \"=\"*70)\n",
+        "    print(\"SUMMARY:\")\n",
+        "    print(\"=\"*70)\n",
+        "    print(f\"Global ECI correlation with log(Fitness):      {corr_eci_logF:6.3f}\")\n",
+        "    print(f\"Average within-community correlation:          {avg_within_corr_logF:6.3f}\")\n",
+        "    print(f\"\\nImprovement: {avg_within_corr_logF - corr_eci_logF:+.3f}\")\n",
+        "    \n",
+        "    print(\"\\n⚠️  KEY FINDING:\")\n",
+        "    if avg_within_corr_logF > corr_eci_logF + 0.1:\n",
+        "        print(\"  ✓ ECI works BETTER within communities!\")\n",
+        "        print(\"  → Community detection + within-community ECI is a viable strategy\")\n",
+        "        print(\"  → Use Fitness for global ranking, ECI for within-community ranking\")\n",
+        "    else:\n",
+        "        print(\"  ✗ ECI still struggles even within communities\")\n",
+        "        print(\"  → May need finer community detection or different approach\")\n",
+        "        print(\"  → Fitness remains the more robust global measure\")\n",
+        "    print(\"=\"*70)"
       ]
     },
     {
