Operational simulation studies.

--- a/examples/spectral_entropic_comparison.ipynb
+++ b/examples/spectral_entropic_comparison.ipynb
@@ -3,8 +3,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "colab_type": "text",
-        "id": "view-in-github"
+        "id": "view-in-github",
+        "colab_type": "text"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/lawrennd/fitkit/blob/main/examples/spectral_entropic_comparison.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -45,9 +45,45 @@
       },
       "outputs": [],
       "source": [
-        "# Import fitkit from parent directory\n",
         "import sys\n",
-        "sys.path.insert(0, '..')"
+        "import subprocess\n",
+        "from pathlib import Path\n",
+        "\n",
+        "\n",
+        "def _pip_install(args: list[str]) -> None:\n",
+        "    cmd = [sys.executable, \"-m\", \"pip\", *args]\n",
+        "    print(\"Running:\", \" \".join(cmd))\n",
+        "    subprocess.check_call(cmd)\n",
+        "\n",
+        "\n",
+        "def ensure_fitkit_installed() -> None:\n",
+        "    \"\"\"Prefer editable local install; fall back to GitHub.\n",
+        "\n",
+        "    - Local (typical): `pip install -e ..` when running from `examples/`\n",
+        "    - Colab/remote: `pip install git+https://github.com/lawrennd/fitkit.git`\n",
+        "    \"\"\"\n",
+        "    try:\n",
+        "        import fitkit  # noqa: F401\n",
+        "\n",
+        "        return\n",
+        "    except ImportError:\n",
+        "        pass\n",
+        "\n",
+        "    here = Path.cwd().resolve()\n",
+        "    candidates = [here, here.parent, here.parent.parent]\n",
+        "\n",
+        "    for root in candidates:\n",
+        "        if (root / \"pyproject.toml\").exists() and (root / \"fitkit\").is_dir():\n",
+        "            _pip_install([\"install\", \"-e\", str(root)])\n",
+        "            return\n",
+        "\n",
+        "    _pip_install([\"install\", \"git+https://github.com/lawrennd/fitkit.git\"])\n",
+        "\n",
+        "\n",
+        "ensure_fitkit_installed()\n",
+        "import fitkit\n",
+        "\n",
+        "print(\"fitkit version:\", getattr(fitkit, \"__version__\", \"unknown\"))"
       ]
     },
     {
@@ -96,35 +132,35 @@
         "    Used for spectral gap analysis alongside the ECI class.\n",
         "    \"\"\"\n",
         "    from scipy.sparse.linalg import eigs\n",
-        "    \n",
+        "\n",
         "    M = M.astype(float)\n",
         "    n_countries, n_products = M.shape\n",
-        "    \n",
+        "\n",
         "    k_c = M.sum(axis=1) + 1e-10\n",
         "    k_p = M.sum(axis=0) + 1e-10\n",
-        "    \n",
+        "\n",
         "    D_c_inv = sparse.diags(1.0 / k_c)\n",
         "    D_p_inv = sparse.diags(1.0 / k_p)\n",
         "    M_sparse = sparse.csr_matrix(M)\n",
-        "    \n",
+        "\n",
         "    T_countries = D_c_inv @ M_sparse @ D_p_inv @ M_sparse.T\n",
         "    T_products = D_p_inv @ M_sparse.T @ D_c_inv @ M_sparse\n",
-        "    \n",
+        "\n",
         "    n_eigs_c = min(n_eigs, n_countries - 1)\n",
         "    n_eigs_p = min(n_eigs, n_products - 1)\n",
-        "    \n",
+        "\n",
         "    if n_countries > 2:\n",
         "        eigenvalues_c, _ = eigs(T_countries, k=n_eigs_c, which='LM')\n",
         "        eigenvalues_c = np.sort(np.real(eigenvalues_c))[::-1]\n",
         "    else:\n",
         "        eigenvalues_c = np.array([1.0, 0.0])\n",
-        "    \n",
+        "\n",
         "    if n_products > 2:\n",
         "        eigenvalues_p, _ = eigs(T_products, k=n_eigs_p, which='LM')\n",
         "        eigenvalues_p = np.sort(np.real(eigenvalues_p))[::-1]\n",
         "    else:\n",
         "        eigenvalues_p = np.array([1.0, 0.0])\n",
-        "    \n",
+        "\n",
         "    return eigenvalues_c, eigenvalues_p\n",
         "\n",
         "\n",
@@ -862,8 +898,8 @@
   ],
   "metadata": {
     "colab": {
-      "include_colab_link": true,
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
